src/test/resources/errortests/Parsing/InvalidToken/Annotations.t
@new @Annotation @+ // res: P2000, P2000
@"abc" @Annotation2 @25 // res: P2000, P2000
class A

@Annotation(
class A // res: P2000
@Annotation(a
class A // res: P2000
@Annotation(a =
class A // res: P2000
@Annotation(a = 5
class A // res: P2000
@Annotation(a = 5,
class A // res: P2000
@Annotation(a = 5, a
class A // res: P2000
@Annotation(a = 5, a =
class A // res: P2000
@Annotation(a = 5, a = 5
class A // res: P2000
@Annotation(a = 5, )
class A
